Second Portfolio commit

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,12 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Portfolio</title>
 </head>
-<body>
-    <div class="container-fluid ">
-        
-    </div>
+<body class="bg-black">
+    <div class="container-fluid position-absolute top-50 start-50 translate-middle h-75 p-0" style="width: 190vh ; background-color: rgb(23,25,25);">
+        <div class="row h-100 w-100 g-0">    
+            <div class="col-1 h-100 pt-1">
+                <div class="container-fluid">
+                    <div class="col" style="background-color: rgb(161,66,163); margin-left: -12px; margin-right: -12px; margin-top: -5px; padding-top: 7px; ">
+                        <img src="icons/icons8-menu-48.svg" style="padding-left: 25px; padding-bottom: 7px;">
+                      </div>
+                    <div class="col p-4">
+                       
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-5">
+                <img src="Moinuddin.jpeg" alt="" class="img-fluid " style="height: 85vh; margin-top: -7%;">
+            </div>
+            <div class="col-6">
+                One of three columns
+                </div>
+            </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
