--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,7 +14,7 @@
             <div class="col-1">
                 <div class="row w-100 h-100 g-0 justify-content-center">
                     <div class="d-flex flex-column bg-info">
-                        <div class="bg-white" style=" padding-left: 35%; padding-top: 20%; padding-bottom: 20%"><i class="fa fa-bars" style="font-size:25px; color: rgb(14,37,59)"></i></div>
+                        <div class="bg-white" id="column-1"><i class="fa fa-bars"></i></div>
                         <div class="p-4 m-4"></div>
                         
                         <div style="padding-left: 32%; padding-bottom: 30%"><i class="fas fa-user-alt" style="color:white ; font-size:25px"></i></div>
@@ -38,9 +38,9 @@
                     <div class="col-2"><i class="fa-brands fa-instagram" style="color:white ; font-size:15px"></i></div>
                 </div>
             </div>
-            <div class="col-6 bg-info">
-                <div class="overflow-auto">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolorum numquam est debitis tenetur. Minima, consequuntur blanditiis vel totam quisquam architecto earum dignissimos, illum esse labore exercitationem voluptatibus nobis est?
+            <div class="col-6 bg-info overflow-auto scrollbar-primary">
+                <div class="container-fluid bg-white my-3 h-100" style="width: 70vh; margin-left: 3.5vh;">
+                    
                 </div>
             </div>
         </div>
