Fifth Portfolio Commit

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -38,9 +38,15 @@
                     <div class="col-2"><i class="fa-brands fa-instagram" style="color:white ; font-size:15px"></i></div>
                 </div>
             </div>
-            <div class="col-6 bg-info overflow-auto scrollbar-primary">
-                <div class="container-fluid bg-white my-3 h-100" style="width: 70vh; margin-left: 3.5vh;">
-                    
+            <div class="col-6 bg-info overflow-scroll scrollbar-primary">
+                <div class="container-xxl my-3 h-100 " style="width: 70vh; margin-left: 3.5vh;">
+                    <div class="row mx-auto gx-0 justify-content-center" style="width: 65vhvh">
+                        <p class="py-4 ps-2 lead" style="color: rgb(14,37,59); font-size: medium;">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae voluptates libero, consequuntur culpa cumque, molestias quisquam hic iste debitis, ducimus voluptate placeat quod corporis rerum? Placeat odit accusamus minus ut?
+                             Doloremque delectus voluptate repellat dolor fuga expedita, beatae eligendi, exercitationem optio consectetur, modi neque eveniet sapiente sequi architecto odit?
+                        </p>
+                        <hr class="w-75">
+                    </div>
                 </div>
             </div>
         </div>
